--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+<!--    <meta name="viewport" content="max-width=640, initial-scale=1.0, user-scalable=no, target-densitydpi=device-dpi">-->
     <meta name="viewport"
           content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="renderer" content="webkit">
